@@ -2,6 +2,9 @@
 Change log for mod_reader
 ========================================
 
+2021-06-28 (32)
+ - : improve compatability wth PostgreSQL (1) use AVG function instead of (SUM / COUNT); (2) use single quotes when concatenating strings
+
 2021-06-08 (31)
  - add missing level 11 to Reading Level menu for changereaderlevel action in admin.php
 
